# surmeier-lab-to-nwb

./: .gitignore  README.md  extract_dataset_metadata.py  make_env.yml  pyproject.toml
.github/workflows/: test-install.yml
figure_scripts/: figure_1e_somatic_excitability_from_dandi.py  figure_1e_somatic_excitability_reproduction.py  figure_1e_somatic_excitability_reproduction_xarray.py  figure_1i_dendritic_excitability_from_dandi.py  figure_1i_dendritic_excitability_reproduction.py  figure_2gh_oepsc_reproduction.py  figure_2gh_oepsc_reproduction_from_dandi.py  figure_3_somatic_excitability_reproduction.py  figure_5_analyze_dates.py  figure_5_nwb_data_analysis.py  figure_5f_acetylcholine_sensor_reproduction.py  figure_5f_direct_reproduction.py  figure_5f_grabatch_reproduction.py  figure_7j_reproduction.py  figure_8_reproduction.py
notebooks/: figure_1E_dspn_somatic_excitability.ipynb  figure_2GH_oepsc_analysis.ipynb  figure_5F_acetylcholine_biosensor.ipynb  figure_7_behavioral_data_demo.ipynb  how_to_use_this_dataset.ipynb  kymograph_analysis.ipynb  optical_stimuli_experiments.ipynb  reproduce_figure_1_somatic_excitability.ipynb  reproduce_figure_2.ipynb  stream_files.ipynb
scripts/: compare_local_vs_dandi.py  full_per_mouse_day_merge.py  preview_line_scan_images.py  prototype_per_mouse_day_merger.py  run_full_conversion.py  validate_against_dandi.py  validate_against_dandi_streaming.py  validate_all_fi_curves.py  validate_figure_7c.py  wipe_dandiset.py
src/surmeier_lab_to_nwb/zhai2025/: __init__.py  behavior_interface.py  behavior_interfaces.py  behaviorinterface.py  bot_interface.py  conversion_notes.md  convert_all_sessions.py  convert_session.py  devices.py  figure_1_dendritic.py  figure_1_dendritic_excitability.py  figure_1_somatic_experiments.py  figure_2_optical_stimuli.py  figure_2_spine_density.py  figure_3_dendritic_excitability.py  figure_3_somatic_experiments.py  figure_4_confocal_spine_density_nikon.py  figure_4_optical_stimuli.py  figure_4_spine_density.py  figure_4h_confocal_spine_density_olympus.py  figure_5_acetylcholine_grabatch.py  figure_6_dendritic_excitability.py  figure_6_somatic_experiments.py  figure_6_spine_density.py  figure_7_behavioral_aim_experiments.py  figure_7_behavioral_experiments.py  figure_7_behavioral_videos.py  figure_7_dendritic_excitability.py  figure_7_oxoM_dendritic_excitability.py  figure_7_somatic_experiments.py  figure_7_spine_density.py  figure_8_behavioral_aim_experiments.py  figure_8_somatic_experiments.py  figure_8_spine_density.py  general_metadata.yaml  image_stack_interfaces.py  interfaces.py  intracellular_interfaces.py  metadata.yaml  mouse_day_merger.py  (+7 more)
src/surmeier_lab_to_nwb/zhai2025/assets/: AIM testing_CDGI KO.xlsx  Data Connections.xlsx  Image_01_01_01_01.oif  Key resources table_Zhai_v1.xlsx  data_connections_D1_figures_1_2_5.csv  example_pth_file.pty  tracking_issue.md
src/surmeier_lab_to_nwb/zhai2025/assets/Tabular dataset Zhai et al. 2025/: Fig 1 datasets.xlsx  Fig 2 datasets.xlsx  Fig 3 datasets.xlsx  Fig 6 datasets.xlsx  SupFigs datasets.xlsx  _README_Tabular dataset Zhai et al. 2025.txt
src/surmeier_lab_to_nwb/zhai2025/assets/author_assets/: Key resources table_Zhai_v1.xlsx  data_connections_overview.csv  data_connections_videos.csv  data_readme.md
src/surmeier_lab_to_nwb/zhai2025/assets/protocols/: 6OHDA_lesion_model.md  confocal_microscopy.md  dendritic_calcium_2PLSM.md  genetically_encoded_sensors_2PLSM.md  levodopa_dyskinesia_rating.md  patch_clamp_optogenetics.md  protocol_to_experiment_mapping.md  stereotaxic_viral_injection_v1.md  stereotaxic_viral_injection_v2.md
src/surmeier_lab_to_nwb/zhai2025/behavioral_utils/: __init__.py  aim_parser.py  process_aim_data.py  test_suite.py
src/surmeier_lab_to_nwb/zhai2025/conversion_notes_folder/: conversion_notes_overview.md  figure_1_conversion_notes.md  figure_2_conversion_notes.md  figure_3_conversion_notes.md  figure_4_conversion_notes.md  figure_5_conversion_notes.md  figure_6_conversion_notes.md  figure_7_conversion_notes.md  figure_8_conversion_notes.md  supplementary_figure_3_conversion_notes.md  supplementary_figure_4_conversion_notes.md
src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/: conversion_utils.py
src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/acetylcholine_biosensor/: figure_5_acetylcholine_biosensor.py
src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/acetylcholine_imaging/: figure_5_acetylcholine_grabatch.py
src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/aim_behavior/: figure_7_behavioral_aim_experiments.py  figure_8_behavioral_aim_experiments.py
src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/confocal_spine_density/: figure_4_confocal_spine_density_nikon.py  figure_4h_confocal_spine_density_olympus.py
src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/dendritic_excitability/: dendritic_excitability_utils.py  figure_1_dendritic_excitability.py  figure_3_dendritic_excitability.py  figure_6_dendritic_excitability.py  figure_7_dendritic_excitability.py  figure_7_oxoM_dendritic_excitability.py  utils.py
src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/optical_stimulation/: figure_2_optical_stimuli.py  figure_4_optical_stimuli.py  optical_stimulation_utils.py  utils.py
src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/somatic_excitability/: figure_1_somatic_excitability.py  figure_3_somatic_excitability.py  figure_6_somatic_excitability.py  figure_7_somatic_excitability.py  figure_8_somatic_excitability.py  somatic_excitability_utils.py  utils.py
src/surmeier_lab_to_nwb/zhai2025/extractors/: bruker_bot_segmentation_extractor.py  bruker_line_scan_segmentation_extractor.py
src/surmeier_lab_to_nwb/zhai2025/interfaces/: __init__.py  behavior_interfaces.py  bruker_bot_segmentation_interface.py  bruker_line_scan_interface.py  bruker_line_scan_kymograph_interface.py  bruker_line_scan_source_image_interface.py  image_stack_interfaces.py  intracellular_interfaces.py  ophys_interfaces.py  optogenetics_interfaces.py  prairie_view_fluorescence_interface.py  prairie_view_utils.py  trials_interface.py
(+18 files in other folders)
