[project]
name = "surmeier-lab-to-nwb"
version = "0.0.1"
description = "NWB conversion scripts, functions, and classes for Surmeier  conversion"
readme = "README.md"
authors = [{ name = "CatalystNeuro", email = "ben.dichter@catalystneuro.com" }]
maintainers = [{ name = "CatalystNeuro", email = "ben.dichter@catalystneuro.com" }]
license = { file = "LICENSE" }
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
  "neuroconv>=0.7.4",
  "nwbinspector",
  "lxml",
  "nd2>=0.10.3",
  "xmltodict>=0.14.2",
  "tifffile>=2025.5.10",
  "roiextractors>=0.5.13",
  "hdmf==4.0.0",
  "astropy>=6.1.7",
  "ndx-optogenetics",
  "pandas>=2.2.3",
  "openpyxl>=3.1.5",
  "opencv-python-headless>=4.12.0.88",
  "tqdm>=4.67.1",
  "imagecodecs>=2025.3.30",
  "dandi>=0.69.3",
]
# Astropy I use for the date

[project.urls]
Repository="https://github.com/catalystneuro/surmeier-lab-to-nwb"

[project.optional-dependencies]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
  "*.yaml",
  "*.yml",
  "*.json",
]  # This includes the yaml (usually metadata) and any schemas you might need on both the sdist and wheel

[tool.hatch.build.targets.wheel]
packages = ["src/surmeier_lab_to_nwb"]

[tool.hatch.build.targets.sdist]
packages = ["src/surmeier_lab_to_nwb"]

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.toml
  |\.yml
  |\.md
  |\.txt
  |\.sh
  |\.git
  |\.ini
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''


[tool.codespell]
skip = '*.git*,*.pdf,*.css, *.ipynb,*/assets/*,*.txt'
check-hidden = true
ignore-words-list = 'assertin,sems,sinlge,singl,som'


[tool.ruff]

[tool.ruff.lint]
select = [
    "F401",  # Unused import
    "I",  # All isort rules
]
fixable = ["ALL"]

[tool.ruff.lint.isort]
relative-imports-order = "closest-to-furthest"
known-first-party = ["surmeier_lab_to_nwb"]

[tool.uv.sources]
neuroconv = { path = "../neuroconv", editable = true }
roiextractors = { path = "../roiextractors", editable = true }
ndx-optogenetics = { path = "../ndx-optogenetics", editable = true }

[tool.uv]
config-settings = { editable_mode = "compat" }

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "pre-commit>=4.2.0",
    "seaborn>=0.13.2",
    "poethepoet>=0.32.1",
    "xarray>=2025.7.1",
    "tabulate>=0.9.0",
]


[tool.poe]
executor.type = "uv"

[tool.poe.tasks]
# Main conversion tasks
convert_all = { sequence = [
    "convert_dendritic",
    "convert_somatic",
    "convert_spine",
    "convert_confocal",
    "convert_behavior",
    "convert_videos",
    "convert_biosensor",
    "convert_optical",
], help = "Run all conversion scripts (stub test mode - processes only first 2 files per condition)." }

convert_all_full = { sequence = [
    "convert_dendritic_full",
    "convert_somatic_full",
    "convert_spine_full",
    "convert_confocal_full",
    "convert_behavior_full",
    "convert_videos_full",
    "convert_biosensor_full",
    "convert_optical_full",
], help = "Run all conversion scripts (full processing mode - processes all files)." }


# Experiment type conversion tasks (stub test by default)
convert_dendritic = { shell = '''python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/dendritic_excitability/figure_1_dendritic_excitability.py && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/dendritic_excitability/figure_3_dendritic_excitability.py && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/dendritic_excitability/figure_6_dendritic_excitability.py && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/dendritic_excitability/figure_7_dendritic_excitability.py && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/dendritic_excitability/figure_7_oxoM_dendritic_excitability.py''', help = "Run all dendritic excitability conversion scripts (stub test)." }
convert_somatic = { shell = '''python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/somatic_excitability/figure_1_somatic_excitability.py && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/somatic_excitability/figure_3_somatic_excitability.py && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/somatic_excitability/figure_6_somatic_excitability.py && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/somatic_excitability/figure_7_somatic_excitability.py && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/somatic_excitability/figure_8_somatic_excitability.py''', help = "Run all somatic excitability conversion scripts (stub test)." }
convert_spine = { shell = '''python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/spine_density/figure_2_spine_density.py && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/spine_density/figure_4_spine_density.py && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/spine_density/figure_6_spine_density.py && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/spine_density/figure_7_spine_density.py && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/spine_density/figure_8_spine_density.py''', help = "Run all spine density conversion scripts (stub test)." }
convert_confocal = { shell = '''python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/confocal_spine_density/figure_4_confocal_spine_density_nikon.py && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/confocal_spine_density/figure_4h_confocal_spine_density_olympus.py''', help = "Run all confocal spine density conversion scripts (stub test)." }
convert_behavior = { shell = '''python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/aim_behavior/figure_7_behavioral_aim_experiments.py && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/aim_behavior/figure_8_behavioral_aim_experiments.py''', help = "Run all AIM behavior conversion scripts (stub test)." }
convert_videos = { shell = '''python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/videos/figure_7_behavioral_videos.py && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/videos/supplementary_figure_3_behavioral_videos.py''', help = "Run all video conversion scripts (stub test)." }
convert_biosensor = { cmd = '''python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/acetylcholine_biosensor/figure_5_acetylcholine_biosensor.py''', help = "Run acetylcholine biosensor conversion script (stub test)." }
convert_optical = { shell = '''python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/optical_stimulation/figure_2_optical_stimuli.py && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/optical_stimulation/figure_4_optical_stimuli.py''', help = "Run all optical stimulation conversion scripts (stub test)." }

# Full processing tasks (process all files)
convert_dendritic_full = { shell = '''python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/dendritic_excitability/figure_1_dendritic_excitability.py --stub-test=False && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/dendritic_excitability/figure_3_dendritic_excitability.py --stub-test=False && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/dendritic_excitability/figure_6_dendritic_excitability.py --stub-test=False && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/dendritic_excitability/figure_7_dendritic_excitability.py --stub-test=False && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/dendritic_excitability/figure_7_oxoM_dendritic_excitability.py --stub-test=False''', help = "Run all dendritic excitability conversion scripts (full processing)." }
convert_somatic_full = { shell = '''python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/somatic_excitability/figure_1_somatic_excitability.py --stub-test=False && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/somatic_excitability/figure_3_somatic_excitability.py --stub-test=False && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/somatic_excitability/figure_6_somatic_excitability.py --stub-test=False && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/somatic_excitability/figure_7_somatic_excitability.py --stub-test=False && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/somatic_excitability/figure_8_somatic_excitability.py --stub-test=False''', help = "Run all somatic excitability conversion scripts (full processing)." }
convert_spine_full = { shell = '''python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/spine_density/figure_2_spine_density.py --stub-test=False && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/spine_density/figure_4_spine_density.py --stub-test=False && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/spine_density/figure_6_spine_density.py --stub-test=False && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/spine_density/figure_7_spine_density.py --stub-test=False && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/spine_density/figure_8_spine_density.py --stub-test=False''', help = "Run all spine density conversion scripts (full processing)." }
convert_confocal_full = { shell = '''python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/confocal_spine_density/figure_4_confocal_spine_density_nikon.py --stub-test=False && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/confocal_spine_density/figure_4h_confocal_spine_density_olympus.py --stub-test=False''', help = "Run all confocal spine density conversion scripts (full processing)." }
convert_behavior_full = { shell = '''python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/aim_behavior/figure_7_behavioral_aim_experiments.py --stub-test=False && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/aim_behavior/figure_8_behavioral_aim_experiments.py --stub-test=False''', help = "Run all AIM behavior conversion scripts (full processing)." }
convert_videos_full = { shell = '''python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/videos/figure_7_behavioral_videos.py --stub-test=False && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/videos/supplementary_figure_3_behavioral_videos.py --stub-test=False''', help = "Run all video conversion scripts (full processing)." }
convert_biosensor_full = { cmd = '''python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/acetylcholine_biosensor/figure_5_acetylcholine_biosensor.py --stub-test=False''', help = "Run acetylcholine biosensor conversion script (full processing)." }
convert_optical_full = { shell = '''python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/optical_stimulation/figure_2_optical_stimuli.py --stub-test=False && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/optical_stimulation/figure_4_optical_stimuli.py --stub-test=False''', help = "Run all optical stimulation conversion scripts (full processing)." }

# Figure-based tasks (stub test by default)
convert_fig1 = { shell = '''python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/dendritic_excitability/figure_1_dendritic_excitability.py && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/somatic_excitability/figure_1_somatic_excitability.py''', help = "Run figure 1 conversion scripts." }
convert_fig2 = { shell = '''python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/optical_stimulation/figure_2_optical_stimuli.py && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/spine_density/figure_2_spine_density.py''', help = "Run figure 2 conversion scripts." }
convert_fig3 = { shell = '''python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/dendritic_excitability/figure_3_dendritic_excitability.py && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/somatic_excitability/figure_3_somatic_excitability.py''', help = "Run figure 3 conversion scripts." }
convert_fig4 = { shell = '''python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/confocal_spine_density/figure_4_confocal_spine_density_nikon.py && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/optical_stimulation/figure_4_optical_stimuli.py && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/spine_density/figure_4_spine_density.py && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/confocal_spine_density/figure_4h_confocal_spine_density_olympus.py''', help = "Run figure 4 conversion scripts." }
convert_fig5 = { cmd = '''python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/acetylcholine_biosensor/figure_5_acetylcholine_biosensor.py''', help = "Run figure 5 conversion scripts." }
convert_fig6 = { shell = '''python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/dendritic_excitability/figure_6_dendritic_excitability.py && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/somatic_excitability/figure_6_somatic_excitability.py && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/spine_density/figure_6_spine_density.py''', help = "Run figure 6 conversion scripts." }
convert_fig7 = { shell = '''python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/aim_behavior/figure_7_behavioral_aim_experiments.py && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/videos/figure_7_behavioral_videos.py && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/dendritic_excitability/figure_7_dendritic_excitability.py && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/dendritic_excitability/figure_7_oxoM_dendritic_excitability.py && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/somatic_excitability/figure_7_somatic_excitability.py && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/spine_density/figure_7_spine_density.py''', help = "Run figure 7 conversion scripts." }
convert_fig8 = { shell = '''python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/aim_behavior/figure_8_behavioral_aim_experiments.py && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/somatic_excitability/figure_8_somatic_excitability.py && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/spine_density/figure_8_spine_density.py''', help = "Run figure 8 conversion scripts." }
convert_supfig3 = { shell = '''python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/videos/supplementary_figure_3_behavioral_videos.py''', help = "Run supplementary figure 3 conversion scripts." }
