[project]
name = "surmeier-lab-to-nwb"
version = "0.0.1"
description = "NWB conversion scripts, functions, and classes for Surmeier  conversion"
readme = "README.md"
authors = [{ name = "CatalystNeuro", email = "ben.dichter@catalystneuro.com" }]
maintainers = [{ name = "CatalystNeuro", email = "ben.dichter@catalystneuro.com" }]
license = { file = "LICENSE" }
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
  "neuroconv>=0.7.4",
  "nwbinspector>=0.7.2",
  "lxml>=6.1.1",
  "nd2>=0.11.3",
  "xmltodict>=1.0.4",
  "tifffile>=2026.5.15",
  "roiextractors>=0.5.13",
  "hdmf>=4.1.1",
  "astropy>=7.2.0",
  "ndx-optogenetics",
  "pandas>=2.2.3",
  "openpyxl>=3.1.5",
  "opencv-python-headless>=4.13.0.92",
  "tqdm>=4.67.3",
  "imagecodecs>=2026.5.10",
  "dandi>=0.76.0",
  "ndx-ophys-devices>=0.3.1",
]
# Astropy I use for the date

[project.urls]
Repository="https://github.com/catalystneuro/surmeier-lab-to-nwb"

[project.optional-dependencies]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
  "*.yaml",
  "*.yml",
  "*.json",
]  # This includes the yaml (usually metadata) and any schemas you might need on both the sdist and wheel

[tool.hatch.build.targets.wheel]
packages = ["src/surmeier_lab_to_nwb"]

[tool.hatch.build.targets.sdist]
packages = ["src/surmeier_lab_to_nwb"]

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.toml
  |\.yml
  |\.md
  |\.txt
  |\.sh
  |\.git
  |\.ini
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''


[tool.codespell]
skip = '*.git*,*.pdf,*.css, *.ipynb,*/assets/*,*.txt'
check-hidden = true
ignore-words-list = 'assertin,sems,sinlge,singl,som'


[tool.ruff]

[tool.ruff.lint]
select = [
    "F401",  # Unused import
    "I",  # All isort rules
]
fixable = ["ALL"]

[tool.ruff.lint.isort]
relative-imports-order = "closest-to-furthest"
known-first-party = ["surmeier_lab_to_nwb"]

[tool.uv.sources]
neuroconv = { path = "/home/heberto/development/work_repos/neuroconv", editable = true }
roiextractors = { path = "/home/heberto/development/work_repos/roiextractors", editable = true }
ndx-optogenetics = { path = "/home/heberto/development/work_repos/ndx_extensions/ndx-optogenetics", editable = true }

[tool.uv]
config-settings = { editable_mode = "compat" }

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "pre-commit>=4.6.0",
    "seaborn>=0.13.2",
    "poethepoet>=0.46.0",
    "xarray>=2026.4.0",
    "tabulate>=0.10.0",
    "remfile>=0.1.13",
    "python-dotenv>=1.2.2",
]


[tool.poe]
executor.type = "uv"

[tool.poe.tasks]
# Main conversion tasks
convert_all = { sequence = [
    "merge_patch_clamp",
    "convert_spine",
    "convert_confocal",
    "convert_behavior",
    "convert_videos",
    "convert_biosensor",
    "convert_optical",
], help = "Run the full conversion: per-mouse-day merge for patch-clamp figures (F1, F3, F6, F7, F8) plus per-condition conversion for spine density, biosensor, AIM, videos, and Sr-oEPSC (stub test mode for those that support it)." }

convert_all_full = { sequence = [
    "merge_patch_clamp",
    "convert_spine_full",
    "convert_confocal_full",
    "convert_behavior_full",
    "convert_videos_full",
    "convert_biosensor_full",
    "convert_optical_full",
], help = "Run the full conversion in full processing mode: per-mouse-day patch-clamp merge plus full-processing per-condition for everything else." }


# Per-mouse-day merge: patch-clamp figures (F1, F3, F6, F7, F8). Replaces
# convert_dendritic and convert_somatic. Always processes all data (no stub mode);
# total runtime is ~1 min for 58 mouse-day files at ~830 MB.
merge_patch_clamp = { cmd = "python scripts/full_per_mouse_day_merge.py", help = "Run the per-mouse-day icephys merge across F1, F3, F6, F7, F8." }
convert_spine = { shell = '''python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/spine_density/figure_2_spine_density.py && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/spine_density/figure_4_spine_density.py && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/spine_density/figure_6_spine_density.py && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/spine_density/figure_7_spine_density.py && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/spine_density/figure_8_spine_density.py''', help = "Run all spine density conversion scripts (stub test)." }
convert_confocal = { shell = '''python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/confocal_spine_density/figure_4_confocal_spine_density_nikon.py && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/confocal_spine_density/figure_4h_confocal_spine_density_olympus.py''', help = "Run all confocal spine density conversion scripts (stub test)." }
convert_behavior = { shell = '''python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/aim_behavior/figure_7_behavioral_aim_experiments.py && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/aim_behavior/figure_8_behavioral_aim_experiments.py''', help = "Run all AIM behavior conversion scripts (stub test)." }
convert_videos = { shell = '''python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/videos/figure_7_behavioral_videos.py && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/videos/supplementary_figure_3_behavioral_videos.py''', help = "Run all video conversion scripts (stub test)." }
convert_biosensor = { cmd = '''python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/acetylcholine_biosensor/figure_5_acetylcholine_biosensor.py''', help = "Run acetylcholine biosensor conversion script (stub test)." }
convert_optical = { shell = '''python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/optical_stimulation/figure_2_optical_stimuli.py && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/optical_stimulation/figure_4_optical_stimuli.py''', help = "Run all optical stimulation conversion scripts (stub test)." }

# Full processing tasks (process all files)
convert_spine_full = { shell = '''python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/spine_density/figure_2_spine_density.py --stub-test=False && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/spine_density/figure_4_spine_density.py --stub-test=False && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/spine_density/figure_6_spine_density.py --stub-test=False && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/spine_density/figure_7_spine_density.py --stub-test=False && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/spine_density/figure_8_spine_density.py --stub-test=False''', help = "Run all spine density conversion scripts (full processing)." }
convert_confocal_full = { shell = '''python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/confocal_spine_density/figure_4_confocal_spine_density_nikon.py --stub-test=False && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/confocal_spine_density/figure_4h_confocal_spine_density_olympus.py --stub-test=False''', help = "Run all confocal spine density conversion scripts (full processing)." }
convert_behavior_full = { shell = '''python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/aim_behavior/figure_7_behavioral_aim_experiments.py --stub-test=False && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/aim_behavior/figure_8_behavioral_aim_experiments.py --stub-test=False''', help = "Run all AIM behavior conversion scripts (full processing)." }
convert_videos_full = { shell = '''python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/videos/figure_7_behavioral_videos.py --stub-test=False && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/videos/supplementary_figure_3_behavioral_videos.py --stub-test=False''', help = "Run all video conversion scripts (full processing)." }
convert_biosensor_full = { cmd = '''python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/acetylcholine_biosensor/figure_5_acetylcholine_biosensor.py --stub-test=False''', help = "Run acetylcholine biosensor conversion script (full processing)." }
convert_optical_full = { shell = '''python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/optical_stimulation/figure_2_optical_stimuli.py --stub-test=False && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/optical_stimulation/figure_4_optical_stimuli.py --stub-test=False''', help = "Run all optical stimulation conversion scripts (full processing)." }

# Figure-based tasks. Patch-clamp data (somatic + dendritic excitability) is now
# handled per-mouse-day by `merge_patch_clamp`, so the per-figure tasks below
# cover only the non-patch-clamp scripts unique to each figure. Run
# `merge_patch_clamp` separately if you need the patch-clamp files for that figure.
convert_fig2 = { shell = '''python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/optical_stimulation/figure_2_optical_stimuli.py && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/spine_density/figure_2_spine_density.py''', help = "Run figure 2 non-patch-clamp scripts (Sr-oEPSC + spine density)." }
convert_fig4 = { shell = '''python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/confocal_spine_density/figure_4_confocal_spine_density_nikon.py && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/optical_stimulation/figure_4_optical_stimuli.py && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/spine_density/figure_4_spine_density.py && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/confocal_spine_density/figure_4h_confocal_spine_density_olympus.py''', help = "Run figure 4 non-patch-clamp scripts (Sr-oEPSC + 2P spine density + confocal Nikon + Olympus)." }
convert_fig5 = { cmd = '''python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/acetylcholine_biosensor/figure_5_acetylcholine_biosensor.py''', help = "Run figure 5 acetylcholine biosensor conversion." }
convert_fig6 = { cmd = '''python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/spine_density/figure_6_spine_density.py''', help = "Run figure 6 non-patch-clamp scripts (spine density)." }
convert_fig7 = { shell = '''python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/aim_behavior/figure_7_behavioral_aim_experiments.py && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/videos/figure_7_behavioral_videos.py && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/spine_density/figure_7_spine_density.py''', help = "Run figure 7 non-patch-clamp scripts (AIM + videos + spine density)." }
convert_fig8 = { shell = '''python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/aim_behavior/figure_8_behavioral_aim_experiments.py && python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/spine_density/figure_8_spine_density.py''', help = "Run figure 8 non-patch-clamp scripts (AIM + spine density)." }
convert_supfig3 = { shell = '''python src/surmeier_lab_to_nwb/zhai2025/conversion_scripts/videos/supplementary_figure_3_behavioral_videos.py''', help = "Run supplementary figure 3 video conversion." }
